--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,10 @@
     "ecmaVersion": "latest",
     "sourceType": "script"
   },
+  "globals": {
+    "game": "readonly",
+    "player": "readonly"
+    },
   "rules": {
     "no-console": "off",
     "no-loop-func": [
